--- a/WebContent/login.html
+++ b/WebContent/login.html
@@ -1,9 +1,8 @@
-<!DOCTYPE script PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <title>Login</title>
 <head>
-<meta charset="UTF-8">
-<script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.8.0.js"></script>
+<meta charset="UTF-8" />
+<!-- <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.8.0.js"></script> -->
 <script type="text/javascript" src="js/login.js"></script>
 <link href="css/login.css" rel="stylesheet" type="text/css">
 </head>
@@ -19,18 +18,22 @@
             <td class="inputLabel">
               <label>用户名</label>
             </td>
+
             <td class="inputTxt">
-              <input type="text" name="username" id="username" placeholder="username" />
+              <input type="text" name="username" id="username" />
             </td>
           </tr>
+
           <tr>
             <td class="inputLabel">
               <label>密码</label>
             </td>
+
             <td class="inputTxt">
-              <input type="password" name="password" id="password" placeholder="password" />
+              <input type="password" name="password" id="password" />
             </td>
           </tr>
+
           <tr>
             <td colspan="2">
               <input type="submit" class="submitBtn" id="loginBtn" onclick="return clickBtn(this.form)" value="login" />
