--- a/WebContent/Login.html
+++ b/WebContent/Login.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <!-- <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.8.0.js"></script> -->
-<script type="text/javascript" src="js/login.js"></script>
+<script type="text/javascript" src="js/Login.js"></script>
 <link href="css/login.css" rel="stylesheet" type="text/css">
 </head>
 <body>
